more lectures, solutions

--- a/HWsolutions/Inclass1 - solutions.ipynb
+++ b/HWsolutions/Inclass1 - solutions.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf3dbaee",
+   "id": "a19acb5b",
    "metadata": {},
    "source": [
     "*Now it changes because we are runnig the random number generator repeatedly. Each time generates a new list of numbers*"
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "1ee7c68a",
+   "id": "6185909f",
    "metadata": {
     "tags": []
    },
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "7eea3a64",
+   "id": "ab83a397",
    "metadata": {
     "tags": []
    },
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "cb477aca",
+   "id": "c33fb5ec",
    "metadata": {
     "tags": []
    },
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "10245429",
+   "id": "517c4b76",
    "metadata": {
     "tags": []
    },
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "f0b61d08",
+   "id": "8725ac4f",
    "metadata": {
     "tags": []
    },
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "aafeaf8d",
+   "id": "416daad9",
    "metadata": {
     "tags": []
    },
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "3eb4fa08",
+   "id": "6efc1b8e",
    "metadata": {
     "tags": []
    },
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "5c35b8db",
+   "id": "3a7027fc",
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "94745e15",
+   "id": "c0a7cfa5",
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "72aa426e",
+   "id": "d86943de",
    "metadata": {
     "tags": []
    },
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "59ef8ccb",
+   "id": "3248e0a1",
    "metadata": {
     "tags": []
    },
@@ -561,8 +561,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "d4993e1f",
+   "execution_count": 42,
+   "id": "c64287b0",
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
        " 3.3]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,13 +598,14 @@
    "source": [
     "4*list1\n",
     "#This produces a new list with the elements of list1 repeated 4 times. \n",
-    "#For numbers, you might want to have the addition actually add the corresponding values together or for "
+    "#For numbers, you might want to have the addition actually add the corresponding values together or for strings perform\n",
+    "#string concatenation with these elements. We have seen this is possible with numpy arrays. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4a349da",
+   "id": "9b688ccc",
    "metadata": {},
    "outputs": [],
    "source": []
