--- a/Lecture5.ipynb
+++ b/Lecture5.ipynb
@@ -30,7 +30,9 @@
   {
    "cell_type": "markdown",
    "id": "a2eb5f6e-7bf7-42b2-9e05-25cc070150b3",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## HW1 ORF problem review"
    ]
@@ -50,7 +52,9 @@
   {
    "cell_type": "markdown",
    "id": "c5f805fa-2daf-4493-a8a5-19cd7e38e27c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### First generate the random sequence. The np.random.choice function is useful here:"
    ]
@@ -348,7 +352,9 @@
   {
    "cell_type": "markdown",
    "id": "34018ce3-e0f9-4df6-a375-087f03e9ed31",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Write functions in python:\n",
     "\n",
@@ -1161,7 +1167,10 @@
   {
    "cell_type": "markdown",
    "id": "5e5f3fd3-88ba-4970-b977-84b5a27e4770",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Starting with pandas:\n",
     "\n",
