--- a/Lecture6.ipynb
+++ b/Lecture6.ipynb
@@ -71,7 +71,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "96227406-950f-495b-beba-58734a3577fb",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "frog_data = pd.read_csv('data/xen_uic_hik_stage8_13_30min.tsv',delimiter='\\t')\n",
