--- a/HWsolutions/Untitled1.ipynb
+++ b/HWsolutions/Untitled1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "591d672b-a444-4ac6-9626-8fe5ddd20c75",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,8 @@
     "                new_orf = rand_seq[i: i + min_index + 3]\n",
     "                if len(orf) < len(new_orf):\n",
     "                    orf = new_orf\n",
-    "    print(\"Elcik ORF length is: \" + str(len(orf)))"
+    "    print(\"Elcik ORF length is: \" + str(len(orf)))\n",
+    "    print(orf)"
    ]
   },
   {
@@ -204,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "0112614b-49b5-4f11-bc92-4bc21f21f832",
    "metadata": {},
    "outputs": [
@@ -212,8 +213,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solution length is: 66.0\n",
-      "Elcik ORF length is: 42\n"
+      "Solution length is: 180.0\n",
+      "Elcik ORF length is: 78\n",
+      "ATGATTGAACATGTTTCAGATATCGCGCCCGGAGCTTCTACTCGTTACCACACTCCCTTTGATTGGAGGGTATCATAA\n"
      ]
     }
    ],
