--- a/Lecture15.ipynb
+++ b/Lecture15.ipynb
@@ -5,7 +5,7 @@
    "id": "a55f3083-8578-4f76-b193-7788bcb8f5f5",
    "metadata": {},
    "source": [
-    "## BIOS 470/570 Lecture 14\n",
+    "## BIOS 470/570 Lecture 15\n",
     "\n",
     "## Last time we covered:\n",
     "* ### Sequence alignment with Smith-Waterman\n",
@@ -48,7 +48,7 @@
    },
    "outputs": [],
    "source": [
-    "Entrez.email = \"aw21@rice.edu\" # You should \n",
+    "Entrez.email = \"aw21@rice.edu\" # \n",
     "hh = Entrez.esearch(\"Gene\",\"Smad4 [gene]\") #search the gene database for the term \"Smad4\""
    ]
   },
@@ -558,7 +558,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
