--- a/Lecture17.ipynb
+++ b/Lecture17.ipynb
@@ -34,10 +34,7 @@
     "# default colormap, figure size, and font size\n",
     "plt.rcParams['image.cmap']='gray'\n",
     "plt.rcParams['figure.figsize']=(8,8)\n",
-    "plt.rcParams['font.size'] = 24\n",
-    "\n",
-    "#for playing video using matplotlib\n",
-    "rc('animation', html='html5')"
+    "plt.rcParams['font.size'] = 24"
    ]
   },
   {
