--- a/Lecture17.ipynb
+++ b/Lecture17.ipynb
@@ -161,7 +161,7 @@
    "id": "c532fd96-2e92-463a-acad-47d54de7a644",
    "metadata": {},
    "source": [
-    "### Let's see how we break this image into individual channels and then put them back together. "
+    "### Let's see how we can break this image into individual channels and then put them back together. "
    ]
   },
   {
@@ -185,7 +185,7 @@
    "id": "08f03851-e80a-422d-87c5-e75ce5275d8a",
    "metadata": {},
    "source": [
-    "### This has merged them along the first axis, but for channels to display correctly it needs to be the third one (first one is good for time or z dimension). We can fix this with the move axis function:"
+    "### This has merged them along the first axis, but for channels to display correctly as RGB, they need to be the third axis (first one is good for time or z dimension). We can fix this with the move axis function:"
    ]
   },
   {
@@ -823,14 +823,6 @@
     "fig.add_subplot(1,2,2)\n",
     "showNoAxis(img_dilate)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a88f4869-1012-4507-8653-ab854495205f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
